# ConSmart

./: .gitignore  INICIO_RAPIDO.txt  MIGRATION_FLET_0.80.md  README.md  RESUMEN_ACTUALIZACION.md  main.py  pyproject.toml  requirements.txt  run.sh  test_ui.py  verificar_flet.py
assets/: .gitkeep
data/: .gitkeep
src/: __init__.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py
src/database/repositories/: __init__.py  config_repo.py  movimiento_repo.py  usuario_repo.py
src/logic/: __init__.py  auth_service.py  balance_utils.py  services.py  validators.py
src/ui/: __init__.py  theme.py
src/ui/components/: __init__.py  data_table.py  excel_grid.py  excel_row.py
src/ui/views/: __init__.py  admin_view.py  dashboard_view.py  entry_view.py  history_view.py  login_view.py  usuarios_view.py
